# FastTalk-Ai

./: .gitignore  README.md  compose.yml
backend/: .flake8  Dockerfile  alembic.ini  pyproject.toml
backend/src/app/application/chat/: chat_history.py  create_chat.py  delete_chat.py  get_chats.py  save_message.py
backend/src/app/application/dto/: chat.py  subscription.py  user.py
backend/src/app/application/interfaces/: hasher.py  id_provider.py  interactor.py  uow.py
backend/src/app/application/subscription/: create_subscription.py  delete_subscription.py  get_sub_by_id.py  get_subscriptions.py  update_subscription.py
backend/src/app/application/user/: get_user.py  register.py
backend/src/app/domain/entities/: chat.py  message.py  subscription.py  user.py  user_id.py
backend/src/app/domain/exceptions/: subscription.py  user.py
backend/src/app/domain/services/: access.py
backend/src/app/infrastructure/auth/: password_hasher.py
backend/src/app/main/: routers.py  web.py
backend/src/app/main/dependencies/: application.py  database.py  infrastructure.py  ioc.py  service.py
backend/src/app/presentation/routers/: exc_handler.py  root.py
backend/src/neurogram/application/dto/: subcription.py  user.py
backend/src/neurogram/application/interfaces/: hasher.py  id_provider.py
backend/src/neurogram/application/subcription/: create_subcription.py  delete_subcription.py  get_subcriptions.py  update_subcription.py
backend/src/neurogram/application/subscription/: create_subcription.py  delete_subcription.py  (+2 more)
backend/src/neurogram/main/: routers.py  web.py
(+68 files in other folders)
